app/styles/components/_calendar.scss
$calendar-border-color: #e0e0e0;
$calendar-header-background-color: #ededed;
$calendar-header-text-color: #757575;
$calendar-time-slot-height: 30px;

.calendar {
  border-radius: $global-radius;
  border: 1px solid $calendar-border-color;

  ul {
    line-height: $base-line-height;
  }

  header {
    @extend %grid-row;

    background-color: $calendar-header-background-color;
    border-bottom: 1px solid $calendar-border-color;
    text-align: center;
    color: $calendar-header-text-color;
    font-weight: $font-weight-bold;
    text-transform: uppercase;

    &, .days {
      padding: 0 !important;
    }

    .time-zone, .days > ul > li {
      padding: $column-gutter / 2;
    }

    .time-zone {
      @extend %grid-column-1;
    }

    .days {
      @extend %grid-column-11;

      ul {
        @extend %grid-row;

        > li {
          width: (100% / 7) !important;
          float: left;
        }
      }
    }
  }

  > div {
    max-height: 300px;
    overflow: auto;

    .times {
      @extend %grid-column-1;

      padding: 0 !important;
      border-right: 1px solid $calendar-border-color;
      text-align: center;
      color: $calendar-header-text-color;
      font-weight: $font-weight-bold;
      text-transform: uppercase;

      > li {
        height: $calendar-time-slot-height * 2;
      }
    }

    .days {
      @extend %grid-column-11;

      padding: 0 !important;

      > li {
        width: (100% / 7) !important;
        float: left;

        &:first-child > .dates > li {
          border-left: 0;
        }
      }

      .dates > li {
        height: $calendar-time-slot-height;
        border: 1px solid $calendar-border-color;
        border-right: 0;
        border-bottom: 0;

        &:before {
          content: '\00a0';
        }

        &:first-child {
          border-top: 0;
        }
      }
    }
  }
}

